# hdx-scraper-who

./: .gitignore  README.md  docker-compose.yml  docker-requirements.txt  empty_indicators.tsv  hatch.toml  package-lock.json  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py  run_env  test-requirements.txt  who.py
.config/: pre-commit-config.yaml  ruff.toml
.github/workflows/: build.yml  publish.yaml  run-python-script.yaml
config/: hdx_dataset_static.yaml  hdx_dataset_static.yml  hdx_resource_view_static.yml  project_configuration.yaml  project_configuration.yml  smtp_configuration.yml
database/: db_categories.py  db_dimension_values.py  db_dimensions.py  db_indicator_data.py  db_indicators.py
src/hdx/scraper/who/: __main__.py  (+1 more)
tests/: conftest.py  test_pipeline.py  test_who.py  test_who2.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/: country-dimensionvalues.json  gho-model-sf-hierarchy-indicators.json  global_health_estimates_life_expectancy_and_leading_causes_of_death_and_disability_indicators_AFG.csv  global_health_estimates_life_expectancy_and_leading_causes_of_death_and_disability_indicators_afg.csv  health and demographics_indicators_AFG.csv  health_and_demographics_indicators_AFG.csv  health_indicators_AFG.csv  health_indicators_afg.csv  historical_health_indicators_afg.csv  qc_health_indicators_AFG.csv  qc_health_indicators_afg.csv  sustainable development goals_indicators_AFG.csv  sustainable_development_goals_indicators_AFG.csv  world_health_statistics_indicators_afg.csv
(+7 files in other folders)
